# task-widget

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  task-widget.spec
.github/workflows/: build.yml
scripts/: install_autostart.py  remove_autostart.py
