[project]
name = "task-widget"
version = "0.3.0"
description = "A Windows desktop task list widget built with PySide6."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.11.1",
]

[project.scripts]
task-widget = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pyinstaller]
name = "task-widget"
script = "main.py"
options = ["--onefile", "--windowed", "--icon=NONE"]
